fix: #72: actions bar styles on mobile

--- a/src/pages/all-books/components/actions/Actions.scss
+++ b/src/pages/all-books/components/actions/Actions.scss
@@ -4,7 +4,7 @@
 
 .actions {
   display: flex;
-  justify-content: flex-end;
+  justify-content: flex-start;
   margin-bottom: 12px;
   width: 100%;
   height: 44px;
@@ -20,6 +20,7 @@
 
   &__wrap {
     display: flex;
+    flex-grow: 1;
     flex-direction: row;
     gap: 8px;
   }
@@ -27,14 +28,16 @@
   &__search {
     display: flex;
     align-items: center;
+    flex-grow: 1;
     border: 1px solid v.$color-component-border;
     border-radius: 8px;
     padding: 12px;
-    width: 239px;
     height: 44px;
+    min-width: 239px;
     background-color: v.$color-background-primary;
 
     @include m.tablet {
+      flex-grow: unset;
       width: 343px;
     }
 
